# sc-qrels

./: .gitignore  README.md  pyproject.toml
data/processed/: annotations_merged_final.json  annotations_sme1_openai.json  annotations_sme2_gemini.json  chunk_embeddings.npz  chunks.jsonl  output_distribution.md  questions_sme1.json  retrievals.jsonl
data/processed/chunk_manifests/: chunks_BGE512T_S128.jsonl  chunks_CHARBLOCK1000_NOV0.jsonl  chunks_CHARWIN500_OV50.jsonl  chunks_SENT.jsonl
data/processed/documents/: alice:ch01.json  alice:ch02.json  alice:ch03.json  alice:ch04.json  alice:ch05.json  alice:ch06.json  alice:ch07.json  alice:ch08.json  alice:ch09.json  alice:ch10.json  alice:ch11.json  alice:ch12.json
data/processed/qrels/: qrels_BGE512T_S128.txt  qrels_CHARBLOCK1000_NOV0.txt  qrels_CHARWIN500_OV50.txt  qrels_SENT.txt
data/processed/retriever_runs/: run_BGE_DenseRun_BGE512T_S128.txt  run_BGE_DenseRun_SENT.txt  (+2 more)
docs/: 0_data.md  0_intro.md  1_data.md  2_prepare-alice-docs.md  4_questions_and_spans.md  5_chunking.md  6_embedding.md  label-studio.md
notebooks/: pytorch_device_compatibility.ipynb  pytorch_installation.ipynb
sc_qrels/: align_spans_to_chunks.py  analyze_output_distribution.py  check_access_google_api.py  chunk_documents.py  deduplicate_span_annotations.py  download_alice.py  embed_chunks.py  evaluate_retriever_runs.py  generate_retriever_runs.py  generate_synthetic_queries.py  prepare_alice_docs.py  retrieve_topk_chunks.py  sanity_check.py  sanity_check_chunks.py  scan_unicode_characters.py  tune_alignment_thresholds.py  utils.py
